# Utility

./: .gitignore  .tempt.py  CMakeLists.txt  README.md  qt_act_recorder.txt
CMakeModules/: CustomModules.cmake  FindCASADI.cmake  FindCppUnit.cmake  FindIPOPT.cmake  FindJsonCpp.cmake  FindSuiteSparse.cmake  FindSuperLU.cmake  FindSuperLU2.0.cmake
Data/: .gitignore  simulate.ini
Data/beam/: simulate.ini  simulate_subspace.ini
Data/beam/model/: con_nodes_2.bou  cubpoints.txt  interp_weights.txt  mesh.abq  mesh.elastic
Data/dino/: simu_full.ini  simulate.ini  simulate_subspace.ini
Data/dino/model/: con_nodes.bou  cubpoints.txt  mesh.elastic  mesh.mtl
Data/model/: mesh.elastic
Doc/: .gitignore  IntegrationMethods.tex  MaterialFitting.tex  MaterialFittingExp.rel  MaterialFittingExp.tex  MaterialFitting_Diag_K.tex  MatrixReshape.tex  MtlOpt.rel  MtlOpt.tex  SoftConstraintDetails.tex  StaticDeformation.tex  implicit_lag_simulator.tex
SRC/: CMakeLists.txt
SRC/CASADIExt/: CasADiExt.h  Eigen2CasADi.h
SRC/Collison/: CCD_DPF.cpp  CCD_DPF.h  CMakeLists.txt  Collision.h  CollisionPrimaries.h
SRC/Collison/self-ccd/: DeformBVH-ptr.cpp  DeformBVH.cpp  DeformBVH.h  DeformModel.cpp  DeformModel.h  aabb.h  aap.h  box.h  ccdAPI.cpp  ccdAPI.h  ccd_vf.cpp  feature.h  feature_pair.h  forceline.h  intersect.cpp  kDOP.h  orphan.cpp  plyfile.cpp  readme.txt  timing.cpp  timing.h  tri_pair.h  vec3f.h
SRC/Common/: AuxTools.h  BBox.h  CMakeLists.txt  DrawCurves.h  HarmonicOscillator.h  HashedId.h  IO.h  IOTools.h  JsonFilePaser.cpp  JsonFilePaser.h  Log.h  ObjFileIO.cpp  ObjFileIO.h  ObjMesh.h  Objmesh.cpp  Objmesh.h  PartialConstraints.cpp  PartialConstraints.h  SelectionGroup.cpp  SelectionGroup.h  SparseMatrixIO.h  TetMesh.cpp  TetMesh.h  TetMeshEmbeding.cpp  TetMeshEmbeding.h  Timer.h  UnitTestAssert.h  VTKWriter.cpp  VTKWriter.h  assertext.h
SRC/CppunitExt/: CMakeLists.txt  MyTestFixture.cpp  MyTestFixture.h  main_test.h
SRC/Cuda/: CMakeLists.txt  CuBlasCpp.cpp  CuDiaMat.h  CuFixedMat.h  CuMatrix.h  EleProduct.cpp  EleProduct.h
SRC/CudaExt/: CMakeLists.txt  CuBlasCpp.h  CuFixedVec.h  CuMatrixExt.h  CuVector.h  CuVectorExt.h  EleProduct.cu  WarpedCuBlas.h  WarpedCuBlasFun.h
SRC/Eigen3Ext/: EigenMatrixTools.h  EigenSpareMastrixTools.h  EigenSparseGenEigenSolver.h  EigenSym.cpp  EigenSym.h  MatrixIO.h  PesudoInverse.h  SparseGenEigenSolver.h  SparseLinearEqSolver.cpp  SparseLinearEqSolver.h
SRC/ElasticModel/: BaseFullModel.h  BaseFullSim.h  ElasticForceTetFull.cpp  ElasticForceTetFull.h  ElasticForceTetFullStVK.cpp  ElasticForceTetFullStVK.h  ExtendModalBasis.h  FullElasticModel.h  FullSimulator.cpp  FullSimulator.h  FullStVKSimModel.h  LagImpFullSim.cpp  LagImpFullSim.h  MassMatrix.h  ReducedElasticModel.h  ReducedSimulator.cpp  ReducedSimulator.h
SRC/ElasticModelReduced/: CMakeLists.txt  ExtendModalBasis.h  ReducedElasticModel.cpp  ReducedElasticModel.h  ReducedSimCubature.h  ReducedSimulator.cpp  ReducedSimulator.h
SRC/Math/: CASADITools.h  CMakeLists.txt  ConMatrixTools.h  EigenSolver.h  MatrixIO.h  MatrixTools.h  SparseGenEigenSolver.cpp  SparseGenEigenSolver.h  SparseMatrixTools.h
SRC/QGLViewerExt/Manipulation/: SelectionGroup.cpp  SelectionGroup.h
SRC/QGLViewerExt/Render/: QGLViewerExt.cpp  QGLViewerExt.h  (+1 more)
SRC/UI/: CMakeLists.txt
SRC/UI/Animation/: AniCtrl.cpp
SRC/UI/Manipulation/: ConTrackBall.cpp  ConTrackBall.h  DragCtrl.cpp  DragCtrl.h  DrawWithNames.h  Manipulatoion.cpp  Manipulatoion.h  SelectCtrl.cpp  SelectCtrl.h  VolObjCtrl.h
SRC/UI/RecordAndPlay/: EventSerialization.cpp  EventSerialization.h  QInputEventRecorder.cpp  QInputEventRecorder.h  QInputEventRecorderCmd.h  QInputEventRecorderWidget.cpp  QInputEventRecorderWidget.h  RecordAndReplayWrapper.cpp  record_replay.ui  ui_record_replay.h
SRC/UI/Render/: AxisTorus.cpp  AxisTorus.h  ConTrackBall.cpp  ConTrackBall.h  DragGroupSelDraw.cpp  DragGroupSelDraw.h  MeshRender.cpp  MeshRender.h  QGLViewerExt.cpp  QGLViewerExt.h  SelfRenderRect.cpp  SelfRenderRect.h  TextForRender.h  VolNodeGroupRender.cpp
SRC/UI/Shader/: GLSLProgramObject.cpp  GLSLProgramObject.h  NVShaderUtils.h  PhongShader.cpp  PhongShader.h  subface_fragment.glsl  subface_vertex.glsl  subline_fragment.glsl  subline_vertex.glsl  workplane_fragment.glsl
Script/: cmake.sh  runalltest.py  svn_add_del_commit.py  svnignore  svnignore.sh
TestCase/: CMakeLists.txt
TestCase/CommonTest/: AuxToolsTest.cpp  CMakeLists.txt  DrawCurvesTest.cpp  IOTest.cpp  IOToolsTest.cpp  JsonFilePaserTest.cpp  ObjMeshTest.cpp  ObjmeshTest.cpp  PartialConstraintsTest.cpp  TetMeshTest.cpp  main.cpp  test.cpp  test2.cpp
TestCase/ElasticModelReducedTest/: CMakeLists.txt  ReducedSimCubatureTest.cpp  main.cpp
TestCase/ElasticModelTest/: CMakeLists.txt  ElasticForceTetFullStVKTest.cpp  MassMatrixTest.cpp  ReducedElasticModelTest.cpp
TestCase/HelloDino/: CMakeLists.txt  FullStVKSimulator.h  Simulator.h  main.cpp
TestCase/MathTest/: CASADIToolsTest.cpp  CMakeLists.txt  EigenSolverTest.cpp  MatrixIOTest.cpp  MatrixToolsTest.cpp  SparseGenEigenSolverTest.cpp  SparseMatrixToolsTest.cpp
TestCase/ReducedSimulator/: CMakeLists.txt  ReducedSolidSimulator.cpp  ReducedSolidSimulator.h  main.cpp
TestCase/RenderTest/: CMakeLists.txt  DefManipulator.h  QtEventRecorder.h  SimpleMeshRender.h  main.cpp
TestCase/StVKSimulator/: CMakeLists.txt  StVKSimulator.cpp  StVKSimulator.h  main.cpp  simulate.ini
TestCase/TemptTest/: CMakeLists.txt  ComputeMassMat.cpp  ComputeMassMat.h  ComputeStiffnessMat.cpp  ComputeStiffnessMat.h  FullMtlRecover.h  MaterialFitting.cpp  MaterialFitting.h  MaterialFittingSolver.cpp  QPSolver.h  main.cpp  test.h
TestCase/TestData/: PartialConTest.txt  beamW.txt  beam_sparse_K.b  beam_sparse_M.b  dino.abq  dino.mtl  dino_scaled.elastic  disp_for_test_elastic_energy.b  json.in  one_tet.abq  two_tet.abq  two_tet.elastic
TestCase/UITest/: CMakeLists.txt  TextForRenderTest.cpp  main.cpp
VS/: .gitignore  utility.sln
VS/AnimationEditor/: AnimationEditor.vcproj
VS/Common/: Common.vcproj
VS/UI/: UI.vcproj
VS/utility/: utility.vcproj
