SET(APPNAME MathTest)

AUX_SOURCE_DIRECTORY(. MathTest_src)

ADD_EXECUTABLE(${APPNAME} ${MathTest_src})

TARGET_LINK_LIBRARIES( ${APPNAME} 

  ${SUITESPARSE_LIBRARIES}
  ${LIBDIR}/libutility_math.a
  ${ARPACK_LIBRARIES}
  ${SUPERLU2.0_LIBRARIES}
  ${LAPACK_LIBRARIES}
  ${CASADI_LIBRARIES}
  ${Boost_LIBRARIES}
  )
